--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -1,37 +1,17 @@
 name: mobile
 description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
+
 version: 1.0.0+1
 
 environment:
   sdk: ^3.9.2
-  
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
-  # === UI y Multimedia (Lottie, Audio) === 
+  # === UI y Multimedia (Lottie, Audio) ===
   lottie: ^3.3.2
   audioplayers: ^6.5.1
   cupertino_icons: ^1.0.8
@@ -39,24 +19,24 @@ dependencies:
   drift: ^2.29.0
   path_provider: ^2.1.2
   sqlite3_flutter_libs: ^0.5.21
-  path: ^1.8.3                  # Necesaria para usar 'path_provider' correctamente
+  path: ^1.8.3 # Necesaria para usar 'path_provider' correctamente
   # === Red y Seguridad (Login y Sincronización) ===
-  dio: ^5.4.3                   # Cliente HTTP para Django API
+  dio: ^5.4.3 # Cliente HTTP para Django API
   flutter_secure_storage: ^9.0.0 # Almacenamiento seguro de tokens JWT
-  connectivity_plus: ^6.0.4     # Detección de estado offline/online
+  connectivity_plus: ^6.0.4 # Detección de estado offline/online
 
   google_mlkit_pose_detection: ^0.14.0
   camera: ^0.11.3
   google_mlkit_commons: ^0.11.0
 
-  http: ^1.1.0   # Para hacer peticiones HTTP
+  http: ^1.1.0 # Para hacer peticiones HTTP
 
 dev_dependencies:
   # === Herramientas de Desarrollo ===
   flutter_launcher_icons: "^0.14.4"
   flutter_test:
-    sdk: flutter 
-  flutter_lints: ^5.0.0 
+    sdk: flutter
+  flutter_lints: ^5.0.0
   # === Generación de Código ===
   drift_dev: ^2.29.0
   build_runner: ^2.4.9
@@ -66,10 +46,7 @@ flutter_icons:
   ios: true
   image_path: "assets/images/icono_app.png"
   remove_alpha_ios: true
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
 flutter:
   uses-material-design: true
 
@@ -77,33 +54,3 @@ flutter:
     - assets/images/
     - assets/animations/
     - assets/audio/music/
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
